Fixed encoding functionality

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <video id="player" controls></video><br/>
     <input type="file" id="uploader">
     <!-- <button id="record" width=1280 onclick="onButtonClicked()">Start Stream</button> -->
-    <button id="start"></button>
+    <button id="start">Start Stream</button>
     <button id="stop">Stop Stream</button>
     <button id="start-camera">Start Camera</button>
     <video id ="src" autoplay muted width=1280 height=720></video>
