Finished implementing dash js feature

--- a/index.html
+++ b/index.html
@@ -27,10 +27,14 @@
     <button id="start">Start Stream</button>
     <button id="stop">Stop Stream</button>
     <button id="start-camera">Start Camera</button>
+    <button id="loadDash">Load DASH Playlist</button>
+    <button id="playDash">Play DASH Playlist</button>
     <video id ="src" autoplay muted width=1280 height=720></video>
     <!-- <p id="message"></p> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ffmpeg/0.11.6/ffmpeg.min.js"></script>
     <script src="segment.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/dashjs/4.6.0/dash.all.min.js"></script>
+    <script src="dashPlayer.js"></script>
     <!-- <script src="record.js"></script> -->
     <!-- <script src="script.js"></script> -->
   </body>
